# hoogle-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hoogle-mcp.cabal
src/: Main.hs
src/HoogleMCP/: Hoogle.hs  Server.hs
test/: Main.hs
