cabal-version: 3.14
name:          hoogle-mcp
version:       0.1.0.0
synopsis:      MCP server for Hoogle
license:       NONE
author:        Samuel Schlesinger
maintainer:    sgschlesinger@gmail.com
build-type:    Simple

extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hoogle-mcp
    import:             warnings
    main-is:            Main.hs
    other-modules:
        HoogleMCP.Hoogle
        HoogleMCP.Server
    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions:
        DerivingStrategies
        OverloadedStrings
    ghc-options:        -threaded -rtsopts
    build-depends:
        base >= 4.18 && < 5
      , aeson >= 2
      , bytestring
      , http-conduit >= 2.3
      , text >= 2
